--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo-min.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
-				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
-				</h1>
+				<div class="bg-banniere-texte">
+					<h1 class="text-center hero-bloc-text tc-white ">
+						La chouette agence.
+					</h1>
+				</div>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
@@ -216,9 +218,11 @@
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
-				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
+			<div class="bg-banniere-texte">
+				<h2 class="mg-md text-center tc-white">
+					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+				</h2>
+			</div>
 			<div class="col-sm-12 text-center">
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
