Correction erreur div footer et resizing img première bannière

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
+				</div>
 				<div class="row">
 					<div class="col-sm-4">
 						<h2 class="footerTitle">Partenaires</h2>
