Amélioration ratio contraste

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <!-- bloc-3-what-i-do -->
 <section>
-	<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+	<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture b-parallax" id="bloc-3-what-i-do">
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace bg-banniere-texte">
 				<div class="col-sm-12">
