--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence-min.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence-min.png" alt="logo La Chouette Agence" height="40" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
@@ -65,7 +65,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo-min.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+					<img src="img/logo-min.png" class="center-block image-resize-mode" width="100" alt="Logo La Chouette Agence" />
 					<div class="bg-banniere-texte">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
@@ -181,7 +181,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-min.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-min.jpg" alt="Magazines colorés ouverts" class="img-responsive portfolio-thumb" /></a>
 					<h2 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h2>
@@ -190,7 +190,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/2-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2-min.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+					<a href="#" data-lightbox="img/2-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2-min.jpg" class="img-responsive portfolio-thumb" alt="Photographe prenant une photo avec un appareil photo sur un trepied la nuit" /></a>
 					<h2 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h2>
@@ -201,7 +201,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/3-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3-min.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+					<a href="#" data-lightbox="img/3-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3-min.jpg" class="img-responsive portfolio-thumb" alt="Matériel professionel de photographie, d'enregistrement audio et vidéo avec un Macbook"/></a>
 					<h2 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h2>
@@ -210,7 +210,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/4-min.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4-min.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+					<a href="#" data-lightbox="img/4-min.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4-min.jpg" class="img-responsive portfolio-thumb" alt="Travail avec un Macbook et un iPad" /></a>
 					<h2 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h2>
