--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav" role="navigation">
 					<ul class="site-navigation nav navbar-nav">
 						<li>
-							<a href="index.html" role="menubar" aria-label="Page d'accueil" aria-describedby="Aller à la page d'accueil">Accueil</a>
+							<a href="index.html" role="link" aria-label="Page d'accueil" aria-describedby="Aller à la page d'accueil">Accueil</a>
 						</li>
 						<li>
-							<a href="page2.html" role="menubar" aria-label="Page de contact" aria-describedby="Aller à la page de contact">Contact &gt;</a>
+							<a href="page2.html" role="link" aria-label="Page de contact" aria-describedby="Aller à la page de contact">Contact &gt;</a>
 						</li>
 					</ul>
 				</div>
