Correction role header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<header aria-label="Header" role="header">
+<header aria-label="Header">
 	<div class="bloc bgc-white l-bloc " id="bloc-0">
 		<div class="container bloc-sm">
 
