--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
 <section role="banner" aria-label="Qu'est-ce que je fais?">
 	<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture b-parallax" id="bloc-3-what-i-do">
 		<div class="container bloc-lg">
-			<div class="row tight-width-whitespace bg-banniere-texte">
-				<div class="col-sm-12">
-					<h2 class="mg-md text-center tc-white">
+			<div class="row tight-width-whitespace">
+				<div class="col-sm-12 bg-banniere-texte">
+					<h2 class="mg-md text-center tc-white bg-banniere-texte">
 						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 					</h2>
-					<p class="text-center white">
+					<p class="text-center white bg-banniere-texte">
 						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html" role="link" aria-label="Contact" aria-describedby="Allez à la page de contact">Contactez notre équipe</a><br>
 					</p>
 				</div>
