Correction d'Exercice pour validation W3C

--- a/Exercice/navbar.html
+++ b/Exercice/navbar.html
@@ -16,9 +16,9 @@
 	<div id="header">
 		<div id="logo">
 			<a href="index.html"><img src="../img/la-chouette-agence-min.png" alt="logo La Chouette Agence" height="40" /></a>
-		<div>
+		</div>
 		<nav class="navbar navbar-light navbar-expand-sm">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
