Correction navbar et suppression lien exemple instagram

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="Exercice/navbar.html" role="link"><span class="fa fa-instagram icon-md" role="img" aria-label="Instagram"></span></a>
+								<a class="social" href="index.html" role="link"><span class="fa fa-instagram icon-md" role="img" aria-label="Instagram"></span></a>
 							</div>
 						</div>
 					</div>
