Mise en page citation

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- bloc-2-services -->
 <section aria-label="Service">
 	<div class="bloc bgc-white l-bloc" id="bloc-2-services">
-		<div class="container bloc-md">
+		<div id="serviceContainer" class="container bloc-md">
 			<div class="row">
 				<div class="col-sm-12 text-center">
 					<h2>
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 			<div class="row voffset-lg voffset">
-				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+				<div id="citation" class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 					<h2 aria-label="Citation">
 					"La chouette agence est une excellente agence web ! Les <br>
 					web designers ont réussi à capturer l'essence de notre <br>
@@ -142,7 +142,7 @@
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<section role="banner" aria-label="Qu'est-ce que je fais?">
+<section class="mb" role="banner" aria-label="Qu'est-ce que je fais?">
 	<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture b-parallax" id="bloc-3-what-i-do">
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
